# OyunEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Editor/Include/: Editor.h  EditorImLayer.h
Editor/Source/: Editor.cpp  EditorGameSubsystem.cpp  EditorImLayer.cpp
EditorStarter/: EditorStarter.cpp
Engine/Include/: Camera.h  CameraManager.h  Engine.h  EngineFwdDecleration.h  EngineGlfwHandler.h  EngineImGui.h  Entity.h  ModelStore.h  Shader.h
Engine/Include/Components/: TransformComponent.h
Engine/Include/Math/: Matrix.h  Vector.h
Engine/Include/Subsystems/: EngineSubsytem.h  InputSubsystem.h  LogSubsystem.h  RenderSubsystem.h  WorldSubsystem.h
Engine/Include/subsystems/: ResourceSubsystem.h
Engine/Source/: CameraManager.cpp  Engine.cpp  EngineGlfwHandler.cpp  EngineImGui.cpp  Entity.cpp  FileIO.cpp  ModelStore.cpp  Scene.cpp  Shader.cpp
Engine/Source/Math/: Matrix.cpp  Vector.cpp
Engine/Source/Subsystems/: ResourceSubsystem.cpp  WorldSubsystem.cpp
Engine/Source/components/: Component.cpp
Engine/Source/subsystems/: GameSubsystem.cpp  LogSubsystem.cpp
Libs/: assimp-vc142-mt.exp
Samples/FloatingCubes/include/: FloatingCubesGameSubsystem.h
Samples/FloatingCubes/source/: FloatingCubesGameSubsystem.cpp
Samples/FloatingCubesStarter/: FloatingCubesStarter.cpp
editor/: editor_main.cpp
editor/include/: Editor.h  EditorApp.h  EditorGameSubsystem.h  EditorImLayer.h
editor/source/: Editor.cpp  EditorApp.cpp  EditorGameSubsystem.cpp  EditorImLayer.cpp
editor_starter/: editor_starter.cpp
engine/include/: Engine.h  EngineGlfwHandler.h  EngineImGui.h  Entity.h  FileIO.h  ImLayer.h  ModelStore.h  OyunCore.h  Scene.h  Texture.h  Vector.h  lookup3.h
engine/include/components/: Component.h  StaticMeshComponent.h  TransformComponent.h
engine/include/subsystems/: GameSubsystem.h  InputSubsystem.h  LogSubsystem.h  RenderSubsystem.h  ResourceSubsystem.h  SerializationSubsystem.h  WorldSubsystem.h
engine/resources/shaders/: simple_fragment.shader  simple_vertex.shader
engine/source/: Camera.cpp  CameraManager.cpp  Engine.cpp  EngineGlfwHandler.cpp  EngineGlfwImguiHandler.cpp  EngineImGui.cpp  Entity.cpp  FileIO.cpp  ModelStore.cpp  Shader.cpp  Texture.cpp  Vector.cpp  glad.c
engine/source/Math/: Vector.cpp
engine/source/components/: Component.cpp  StaticMeshComponent.cpp  TransformComponent.cpp
engine/source/subsystems/: GameSubsystem.cpp  InputSubsystem.cpp  LogSubsystem.cpp  RenderSubsystem.cpp  ResourceSubsystem.cpp  SerializationSubsystem.cpp  WorldSubsystem.cpp
floating_cubes_starter/: floating_starter.cpp
include/: App.h  Camera.h  CameraManager.h  Engine.h  EngineGlfwHandler.h  EngineGlfwImguiHandler.h  EngineImGui.h  EngineSubsytem.h  Entity.h  GameSubsystem.h  ImLayer.h  LogSubsystem.h  Material.h  Mesh.h  Model.h  RenderSubsystem.h  Renderer.h  Scene.h  Shader.h  Texture.h  Vector.h  export.h  lookup3.h
include/Components/: Component.h  StaticMeshComponent.h  TransformComponent.h
include/glad/: glad.h
include/subsystems/: EngineSubsytem.h  GameSubsystem.h  LogSubsystem.h  RenderSubsystem.h  ResourceSubsystem.h  WorldSubsystem.h
lib/: glfw3.lib
samples/emptyWindow/: emptywindow.cpp
simple_render/: simple_render_main.cpp
simple_render/include/: SimpleRenderApp.h
simple_render/source/: SimpleRenderApp.cpp
source/: App.cpp  Camera.cpp  CameraManager.cpp  Engine.cpp  EngineGlfwHandler.cpp  EngineGlfwImguiHandler.cpp  EngineImGui.cpp  Entity.cpp  GameSubsystem.cpp  GlfwRenderer.cpp  LogSubsystem.cpp  Material.cpp  Mesh.cpp  Model.cpp  RenderSubsystem.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Vector.cpp  export.cpp
source/components/: Component.cpp  StaticMeshComponent.cpp  TransformComponent.cpp
source/subsystems/: RenderSubsystem.cpp  ResourceSubsystem.cpp  WorldSubsystem.cpp
